# Yunik-GTC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  windows.rc
resources/icon/: yunik.icns
resources/shader/: model.frag  model.vert
src/: main.cpp  settings.hpp
src/lib/: audio.cpp  audio.hpp  filesys.cpp  filesys.hpp  image.cpp  image.hpp  model.cpp  model.hpp  projectManager.cpp  projectManager.hpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.h  window.hpp
src/scene/: mainScene.cpp  mainScene.h  mainScene.hpp
