CMAKE_MINIMUM_REQUIRED (VERSION 3.9)

SET (CMAKE_CXX_STANDARD 17)

IF (DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  SET (CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
       CACHE STRING "")
ENDIF ()

# You can change the project name
PROJECT ("Yunik-GTC")

# You can change the target name
SET (YUNIK_GTC_TARGET yunik-gtc)

# submodules
SET (YUNIK_GTC_SUBMODULES_DIR ${PROJECT_SOURCE_DIR}/submodules)

# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

# GLFW3
ADD_SUBDIRECTORY (${YUNIK_GTC_SUBMODULES_DIR}/glfw glfw EXCLUDE_FROM_ALL)

# GLEW
find_package (GLEW REQUIRED)
include_directories (${GLEW_INCLUDE_DIRS})

# GLM
ADD_SUBDIRECTORY (${YUNIK_GTC_SUBMODULES_DIR}/glm glm EXCLUDE_FROM_ALL)

# Add source to this project's executable.
FILE (GLOB_RECURSE YUNIK_GTC_CPP_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE (GLOB_RECURSE YUNIK_GTC_H_FILES ${PROJECT_SOURCE_DIR}/src/*.hpp)

# Resource file for windows
SET (YUNIK_GTC_WIN_RESOURCE_FILE ${PROJECT_SOURCE_DIR}/windows.rc)

ADD_EXECUTABLE (${YUNIK_GTC_TARGET}
	${YUNIK_GTC_CPP_FILES}
    ${YUNIK_GTC_H_FILES}
    ${YUNIK_GTC_WIN_RESOURCE_FILE}
)

TARGET_LINK_LIBRARIES (${YUNIK_GTC_TARGET}
	${OPENGL_LIBRARIES}
	glfw
	${GLEW_LIBRARIES}
	glm
)
