CMAKE_MINIMUM_REQUIRED (VERSION 3.9)

SET (CMAKE_CXX_STANDARD 17)

# You can change the project name
PROJECT ("Yunik-GTC")

# You can change the target name
SET (YUNIK_GTC_TARGET yunik-gtc)

# submodules
SET (YUNIK_GTC_SUBMODULES_DIR ${PROJECT_SOURCE_DIR}/submodules)

# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

# GLFW3
ADD_SUBDIRECTORY (${YUNIK_GTC_SUBMODULES_DIR}/glfw glfw EXCLUDE_FROM_ALL)

# GLEW
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

ADD_SUBDIRECTORY (${YUNIK_GTC_SUBMODULES_DIR}/glew/build/cmake glew EXCLUDE_FROM_ALL)
INCLUDE_DIRECTORIES (${YUNIK_GTC_SUBMODULES_DIR}/glew/include)

# GLM
ADD_SUBDIRECTORY (${YUNIK_GTC_SUBMODULES_DIR}/glm glm EXCLUDE_FROM_ALL)

# SoLoud
SET (SOLOUD_BACKEND_SDL2 OFF CACHE BOOL "" FORCE)
IF (WIN32) # For Windows
	SET (SOLOUD_BACKEND_WINMM ON CACHE BOOL "" FORCE)
ELSEIF (APPLE) # For OSX
	SET (SOLOUD_BACKEND_COREAUDIO ON CACHE BOOL "" FORCE)
ELSEIF (UNIX AND NOT APPLE) # For Linux
	SET (SOLOUD_BACKEND_ALSA ON CACHE BOOL "" FORCE)
	SET (SOLOUD_BACKEND_OSS ON CACHE BOOL "" FORCE)
ENDIF ()

ADD_SUBDIRECTORY (${YUNIK_GTC_SUBMODULES_DIR}/soloud/contrib soloud EXCLUDE_FROM_ALL)
INCLUDE_DIRECTORIES (${YUNIK_GTC_SUBMODULES_DIR}/soloud/include)

# Add source to this project's executable.
FILE (GLOB_RECURSE YUNIK_GTC_CPP_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE (GLOB_RECURSE YUNIK_GTC_HPP_FILES ${PROJECT_SOURCE_DIR}/src/*.hpp)

# Resource file for windows
SET (YUNIK_GTC_WIN_RESOURCE_FILE ${PROJECT_SOURCE_DIR}/windows.rc)

ADD_EXECUTABLE (${YUNIK_GTC_TARGET}
	${YUNIK_GTC_CPP_FILES}
    ${YUNIK_GTC_HPP_FILES}
    ${YUNIK_GTC_WIN_RESOURCE_FILE}
)

TARGET_LINK_LIBRARIES (${YUNIK_GTC_TARGET}
	${OPENGL_LIBRARIES}
	glfw
	glew_s
	glm
	soloud
)
